--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting Algorithm Visualizer</title>
-    <link rel="icon" type="image/png" href="SwiftTrack.png">
+    <link rel="icon" type="image/png" href="algo.png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -264,4 +264,5 @@
     </script>
 </body>
 </html>
+
 
